release: fix test warning